<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.client.CreateVisit_Client">

    <TextView
        android:id="@+id/text_fulldateHeader"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/_fulldatePl"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_date"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_breedHeader"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/_breedPl"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_breed"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fulldateHeader" />

    <TextView
        android:id="@+id/text_ageHeader"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/_agePl"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_age"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_breedHeader" />

    <TextView
        android:id="@+id/text_descriptionHeader"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/_issueDescriptionPl"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ageHeader"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_addPl"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/_dateHint"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/edit_hours"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_hours"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/_hoursHint"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintEnd_toStartOf="@+id/edit_minutes"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_minutes"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/_minutesHint"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_date" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_breed" />

    <EditText
    android:id="@+id/edit_description"
    android:layout_width="298dp"
    android:layout_height="271dp"
    android:layout_marginBottom="20dp"
    android:ems="10"
    android:gravity="start|top"
    android:inputType="textMultiLine"
    app:layout_constraintBottom_toTopOf="@+id/button_add"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>