<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login">


    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_passwd"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/_passwdPl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_mail" />

    <Button
        android:id="@+id/button_toSignIn"
        android:layout_width="214dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:text="@string/_toSignInPl"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_passwd"
        app:layout_constraintVertical_bias="0.031" />


</androidx.constraintlayout.widget.ConstraintLayout>