<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.doctor.DoctorDashboard">

    <TextView
        android:id="@+id/text_nameHeader"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/_nameHeaderPl"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_surnameHeader"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/_surnameHeaderPl"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nameHeader" />

    <TextView
        android:id="@+id/text_visits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/_visitListPl"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/visitList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/text_name"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="..."
        android:textAlignment="viewStart"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/button_addVisit"
        app:layout_constraintStart_toEndOf="@+id/text_nameHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_surname"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginTop="4dp"
        android:text="..."
        android:textAlignment="viewStart"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/button_addVisit"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/text_surnameHeader"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />


    <Button
        android:id="@+id/button_addVisit"
        android:layout_width="96dp"
        android:layout_height="99dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_addVisitPl"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/visitList"
        android:layout_width="373dp"
        android:layout_height="527dp"
        android:layout_marginBottom="20dp"
        android:dividerHeight="2dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_addVisit"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>